--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  min-width: 100vw;
+  min-height: 100vh;
+  background: #afafaf;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container.dark {
+  background: #222;
+}
+
+:root {
+  --primary-text-color: #000000;
+  --secondary-text-color: #fff;   
+}
+
+[data-theme='dark'] {
+  --primary-text-color: #fff;
+  --secondary-text-color: #000000;   
+}
+
+.content {
+  width: 80%; /* Adjust the width according to your preference */
+   /* Set a maximum width to prevent it from becoming too wide */
+  padding: 20px;
+  margin: 10px;
+  overflow: hidden;
+  /* Add any additional styling you want for the content */
+}
+
+.content h2 {
+    color: var(--primary-text-color);
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.content p {
+    color: var(--primary-text-color);
+    text-align: left;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
 }
