--- a/src/components/introduction/Introduction.css
+++ b/src/components/introduction/Introduction.css
@@ -1,9 +1,23 @@
 .introduction {
     position: relative;
     max-width: 70%;
-    border: solid 1px var(--primary-text-color);
     padding: 20px;
     display: block;
-    margin-left: 425px;
+    margin: 0 auto;
+    border-bottom: solid;
+    border-color: #00ff9d;
 }
 
+.introduction p {
+    font-size: 1.3em;
+}
+
+.profile-pic {
+    max-width: 20%;
+    float: left;
+    padding: 1%;
+    border-radius: 50%;
+    margin-right: 10px;
+    border-style: solid;
+    border-color: #00ff9d;
+}
