--- a/src/components/latest_repos/LatestRepos.css
+++ b/src/components/latest_repos/LatestRepos.css
@@ -1,34 +1,20 @@
-/* .latest-repos {
-    width: 500px;
-    margin: 50px;
-    display: flex;
-    border: solid 1px;
-    padding: 5px;
-    color: #fff;
-}
-
-.repo-list {
-    list-style: none;
-}
-
-.repo-list li {
-    border: solid 1px;
-    width: 485px;
-    margin: 2px;
-} */
-
 .latest-repos ul li a {
     all: unset;
 }
 
-
 .latest-repos {
   position: relative;
   max-width: 30%;
-  border: solid 1px var(--primary-text-color);
-  padding: 20px;
+  padding: 10px;
   display: block;
   float: left;
+  margin: 0 auto;
+  border-bottom: solid;
+  border-color: #00ff9d;
+}
+
+.latest-repos h2 {
+  text-align: left;
 }
 
 .latest-repos ul {
@@ -41,8 +27,7 @@
   color: var(--primary-text-color);
   list-style: none;
   margin: 4px 0;
-  border-left: 2px solid #f99766;
-  transition: 0.3s;
+  border-left: 2px solid var(--primary-container-color);
   cursor: pointer;
 }
 
@@ -56,11 +41,11 @@
   padding-left: 12px;
   display: inline-block;
   z-index: 1;
-  transition: 0.3s;
 }
 
 .latest-repos ul li:hover span {
   color: var(--secondary-text-color);
+  transition: 0.5s;
 }
 
 .latest-repos ul li:before {
@@ -68,14 +53,14 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #FA8072;
+  background: #00ff9d;
   transform: scaleX(0);
   transform-origin: left;
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .latest-repos ul li:hover:before {
-  transform: scaleX(0.95);
+  transform: scaleX(0.92);
 }
 
 
