--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,9 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #FFF;
-    padding: 15px 7%;
-    transition: 0.5s;
+    padding: 5px 2%;
+
 }
 
 .navbar a {
@@ -22,22 +21,31 @@
     list-style: none;
     text-align: left;
     padding-left: 50px;
+    color: var(--primary-text-color)
 }
 
 .nav-list li {
     display: inline-block;
-    margin: 10px 50px;
-    font-size: 18px;
+    margin: 10px 30px;
+    font-size: 20px;
     cursor: pointer;
+    padding: 15px;
+    border-radius: 1px 20%;
+    border-style: solid;
+    border-color: var(--primary-text-color);
+    text-decoration: underline;
+    box-shadow: 5px 5px 10px rgb(177, 177, 177);
+}
+
+.nav-list li:hover{
+    background: rgba(0,0,0,0.06);
+    color: var(--secondary-text-color);
+    border-color: var(--secondary-text-color);
+    transition: 0.5s;
 }
 
 .toggle-icon {
     width: 50px;
     cursor: pointer;
     margin-left: 40px;
-}
-
-.dark .navbar {
-    background: #000;
-    color: #fff;
 }
