--- a/src/components/introduction/Introduction.css
+++ b/src/components/introduction/Introduction.css
@@ -5,7 +5,7 @@
     display: block;
     margin: 0 auto;
     border-bottom: solid;
-    border-color: #00ff9d;
+    border-color: var(--primary-text-color);
 }
 
 .introduction p {
