--- a/src/components/latest_repos/LatestRepos.css
+++ b/src/components/latest_repos/LatestRepos.css
@@ -10,7 +10,7 @@
   float: left;
   margin: 0 auto;
   border-bottom: solid;
-  border-color: #00ff9d;
+  border-color: var(--primary-text-color);
 }
 
 .latest-repos h2 {
