--- a/src/components/Coursework/Coursework.css
+++ b/src/components/Coursework/Coursework.css
@@ -1,9 +1,9 @@
 .coursework {
-    font-size: large;
-    float: left;
     text-align: center;
     list-style-position: inside;
-    max-width: 30%;
+    width: 30%; /* Set the width for Coursework and card-content */
+    padding: 20px;
+    box-sizing: border-box; /* Include padding in the width calculation */
 }
 
 .coursework ul {
