--- a/src/components/GithubCard/GithubCard.css
+++ b/src/components/GithubCard/GithubCard.css
@@ -3,14 +3,15 @@
     max-height: 200px;
     border-radius: 10%;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-    transition: all ease 0.5s;
+    transition: all ease 0.2s;
 }
 
 .project-logo:hover {
-    transform: scale(1.1);
+    transform: scale(1.03);
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
 
 .repo-card {
-    padding-left: 25px;
+    flex: 0 1 calc(25% - 1em);
+    text-align: center;
 }
